Multi-connection test on turtlesim

--- a/aquanet_scripts/aquanet-bcmac.cfg
+++ b/aquanet_scripts/aquanet-bcmac.cfg
@@ -1,1 +1,5 @@
-10
+# Put the Maximum Jitter interval in macrosecond
+# Number only, no other characters please!
+# Format is 
+#Jitter_Interval
+20000
